<resources>
    <string name="app_name">project</string>
    <string name="chuyen">GO</string>
    <string name="ho">Họ</string>
    <string name="ten">Tên</string>
    <string name="mail">Mail</string>
    <string name="pass">Mật Khẩu</string>
    <string name="repass">Nhập Lại Mật Khẩu</string>
    <string name="GT">Giới Tính</string>
    <string name="Nam">Nam</string>
    <string name="Nu">Nữ</string>
    <string name="canhan">Cá nhân</string>
    <string name="donhang">Đơn hàng</string>
    <string name="donhangthanhcong">Đơn hàng thành công</string>
    <string name="madonhang">Mã đơn hàng:</string>
    <string name="tendonhang">Tên đơn hàng:</string>
    <string name="thoigian">Thời gian:</string>
    <string name="gia">Giá:</string>
    <string name="danhgia">ĐÁNH GIÁ</string>
    <string name="luotdanhgia">Lượt đánh giá</string>
    <string name="nguoiban">Người bán:</string>
    <string name="gui">Gửi</string>
    <string name="title_chitietthucung">Chi tiết thú cưng</string>
    <string name="titlt_ttcanhan">Thông tin cá nhân</string>
    <string name="title_ttCaNhan">Thông tin cá nhân</string>
    <string name="tenthucung_chitietthucung">MÈO ANH LÔNG NGẮN</string>
    <string name="sotien">4.000.000đ</string>
    <string name="hoten">Họ tên:</string>
    <string name="email">Email:</string>
    <string name="cuahang">Cửa hàng:</string>
    <string name="tenchucuahang">Anh Khiêm</string>
    <string name="chitietthucung">Chi tiết thú cưng</string>
    <string name="giong">Giống:</string>
    <string name="mau">Màu:</string>
    <string name="gioitinh">Giới tính:</string>
    <string name="tuoi">Số tuổi:</string>
    <string name="thongtinlienhe">Thông tin liên hệ:</string>
    <string name="sdt">Số điện thoại:</string>
    <string name="sdt1">SĐT:</string>
    <string name="diachi">Địa chỉ:</string>
    <string name="danhgiacuahang">Đánh giá cửa hàng</string>
    <string name="chitietmauthucung">Xám xanh</string>
    <string name="chitietgioitinhthucung">Đực</string>
    <string name="chitiettuoithucung">Hai tháng</string>
    <string name="chitietsdt">0833535318</string>
    <string name="chitietemail">anhkhiem123@gmail.com</string>
    <string name="chitietdiachi">53 Võ Văn Ngân, Linh Chiểu, Thủ Đức, Hồ Chí Minh</string>
    <string name="soluocdanhgia">(2 đánh giá)</string>
    <string name="tenkhachhang1">Văn Chiến:</string>
    <string name="noidungdanhgia1">Nuôi con này tốn cơm</string>
    <string name="tenkhachhang2">Hòn sét:</string>
    <string name="noidungdanhgia2">Thịt mều này ngon lắm, làm món canh mều là hết sãy</string>
    <string name="themvaogiohang">Thêm vào giỏ hàng</string>
    <string name="muangay">Mua ngay</string>
    <string name="vuilongnhaptaikhoan">Vui lòng nhập tài khoản</string>
    <string name="vuilongnhapmatkhau">Vui lòng nhập mật khẩu</string>
    <string name="matkhaumoi">Nhập mật khẩu mới</string>
    <string name="matkhaumoi1">Nhập lại mật khẩu mới</string>
    <string name="matkhaucu">Nhập mật khẩu hiện tại</string>
    <string name="ghinho">Ghi nhớ</string>
    <string name="nguoimua">Người mua</string>
    <string name="quanly">Quản lý</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="taotaikhoan">Tạo tài khoản</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="themnguoiban">Thêm người bán</string>

    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="tao">Tạo</string>
    <string name="dk">Thông Báo</string>
    <string name="ss">Đăng Kí Thành Công</string>


    <!--    Home client -->
    <string name="search">PetShop</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="btnSave">Lưu</string>

    <!--    InforUser-->
    <string name="btnChangePass">đổi mật khẩu</string>

    <!--    InforUser-->
    <string name="txtName">Họ tên</string>
    <string name="txtEmail">Email</string>
    <string name="txtSdt">SĐT</string>
    <string name="txtSex">Giới tính</string>
    <string name="txtAddress">Địa chỉ</string>
    <string name="luutc">Lưu thành công</string>
    <string name="nhaptt">Nhập đầy đủ thông tin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dangxuat">Đăng xuất</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chinhsua">Chỉnh sửa</string>
    <string name="about">About</string>
    <string name="emailuser">ntk@yahoo.com</string>
    <string name="quanlydonhang">Quản lý đơn hàng</string>
    <string name="Madonhang">Mã đơn hàng</string>
    <string name="tendonhan">Tên đơn hàng</string>
    <string name="trangthai">Trạng thái</string>
    <string name="hoahong">Hoa Hồng</string>
    <string name="xoa">Xóa</string>
    <string name="xem">Xem</string>
    <string name="xemgd">Xem GD</string>
    <string name="xemthem">Xem thêm</string>
    <string name="chontatca">Chọn tất cả</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="datmua">Đặt mua</string>
    <string name="thanhtien">Thành tiền:</string>
    <string name="khongdong">0đ</string>
    <string name="sanpham">Sản phẩm</string>
    <string name="dongia">Đơn giá</string>
    <string name="thongtintaikhoan">THÔNG TIN TÀI KHOẢN</string>
    <string name="luu">Lưu</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="doimatkhauin">Đổi mật khẩu</string>
    <string name="nhapemail">Nhập email</string>
    <string name="laylaimatkhau">Lấy lại mật khẩu</string>
    <string name="quenmatkhauin">Quên mật khẩu</string>
    <string name="nhapmatkhauhientai">Nhập mật khẩu hiện tại</string>
    <string name="nhapmatkhaumoi">Nhập mật khẩu mới</string>
    <string name="nhaplaimatkhaumoi">Nhập lại mật khẩu mới</string>
    <string name="luuthongtin">Lưu thông tin</string>

    <string name="thongtin">Thông tin</string>

    <string name="taikhoan">Tài khoản</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nguoidung">Người dùng</string>
    <string name="yeucauchinhsua">Yêu cầu chỉ sửa</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="hoanthanh">Hoàn thành</string>
    <string name="danhsachden">Danh Sách Đen</string>
    <string name="nguoidunggiaodich">Quản Lí Người Dùng</string>
    <string name="giaodich">Quản Lí Giao Dịch</string>
    <string name="tb">Thông báo</string>


    <string name="bancomuonsuakhong">Bạn có muốn sửa không?</string>


    <string name="ko">Không</string>
    <string name="co">Có</string>
    <string name="koxoa">Không xóa</string>
    <string name="mksai">Mật khẩu nhập lại không khớp</string>
    <string name="saimkhientai">Sai mật khẩu hiện tại</string>
    <string name="donhanghoanthanh">Đơn hàng hoàn thành</string>
    <string name="chonnguoigiao">Chọn người giao</string>
    <string name="chitietdonhang">Chi tiết đơn hàng</string>
    <string name="danhsachyeucauchinhsua">DANH SÁCH CHỈNH SỬA</string>

    <string name="thoigian1">20/10 - 8:01</string>
    <string-array name="tablayout">
        <item>Home</item>
        <item>Danh mục</item>
        <item>Thông báo</item>
        <item>Cá nhân</item>
    </string-array>

    //chi tiết thú cưng
    <string name="title_chi_tiet_thu_cung" >Chi Tiết Thú Cưng</string>
    <string name="ten_thu_cung">Chó</string>
    <string name="gia_thu_cung">2500000</string>
    <string name="cua_hang">Cửa Hàng :</string>
    <string name="ten_cua_hang">Hoàng</string>
    <string name="shop_chi_tiet">Shop</string>
    <string name="thong_tin_chi_tiet_thu_cung">Thông Tin Chi Tiết : </string>
    <string name="ten_khach_hang">Hòn</string>
    <string name="danh_gia">Thú cưng đẹp, mập mạp, ăn nhiều, tốn cơm</string>
    <string name="them_gio_hang">Thêm Giỏ Hàng</string>
    <string name="mua_ngay">Mua Ngay</string>

    //danh muc nguoi ban
    <string name="title_dm_ngBan">Hoàng Shop</string>
    <string name="toi_dm_ngBan">Tôi</string>
    <string name="add_dm_ngBan">Thêm sản phẩm</string>
    <string name="danhsachden_dm_ngBan">Danh sách đen</string>
    <string name="gianhang_dm_ngBan">Gian Hàng</string>
    <string name="donhang_dm_ngBan">Đơn hàng</string>
    <string name="dangxuat_dm_ngBan">Đăng xuất</string>

    //danh muc thu cung
    <string name="cho_danh_muc_thu_cung">Chó</string>
    <string name="meo_danh_muc_thu_cung">Mèo</string>
    <string name="chim_danh_muc_thu_cung">Chim</string>
    <string name="ca_danh_muc_thu_cung">Cá</string>
    <string name="bosat_danh_muc_thu_cung">Bò Sát</string>
    <string name="khac_danh_muc_thu_cung">Khác</string>
    <string name="search_danh_muc_thu_cung">Search</string>
    <string name="trangchu_danh_muc_thu_cung">TrangChu</string>
    <string name="shopcart_danh_muc_thu_cung">Shopcart</string>
    <string name="title_danh_muc_thu_cung">Danh Mục</string>

    //danh sach san pham
    <string name="danhmuc_ds_sp">Danh mục</string>
    <string name="loai_ds_sp">Loại</string>
    <string name="gia_ds_sp">Giá</string>

    //them san pham
    <string name="title_them_San_Pham">Thêm Sản Phẩm</string>
    <string name="titlesanpham">Tiêu đề Sản Phẩm</string>
    <string name="title_them_Tieu_De">Thêm tiêu đề</string>
    <string name="edit_Tieu_De">...............................</string>
    <string name="thong_Tin_San_Pham">Thông Tin Sản Phẩm</string>
    <string name="thong_Tin_Nguoi_Ban">Thông Tin Người Bán</string>
    <string name="dang_Tin">Đăng Tin</string>
    <string name="Price">Giá </string>
    <string name="them_vao_danh_sach_den">Thêm vào danh sách đen</string>
</resources>
