<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/Header">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_navigate_before_black_24dp">
        </ImageButton>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/themnguoiban"
                style="@style/titleheader_chitietthucung">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="vertical"
        style="@style/canle_dangnhap">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edHNgBano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hoten"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edMailNguoiBan"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/edPassNguoiBan"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/edRepassNgBan"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repass"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
            <EditText
                android:inputType="number"
                android:id="@+id/edSDTNguoiBan"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdt"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
            <EditText
                android:id="@+id/edDCNgBan"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diachi"
                android:background="@drawable/vien"
                android:padding="10dp"></EditText>
            <RadioGroup
                android:layout_marginTop="15dp"
                android:id="@+id/grNgBan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/vien"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gioitinh"></TextView>
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rbnam"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nam"></RadioButton>
                <RadioButton
                    android:id="@+id/rbnu"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nu"></RadioButton>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/btnTaoNgBan"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vienbutton"
            android:text="@string/tao"></Button>
    </LinearLayout>
</LinearLayout>