<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/pet"
        style="@style/margintop20"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            style="@style/canle_dangnhap">
            <EditText
                android:id="@+id/edtTaiKhoan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/vuilongnhaptaikhoan"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"></EditText>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/edtMatKhau"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/vuilongnhapmatkhau"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp">></EditText>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ghinho"
                android:layout_marginTop="20dp"></CheckBox>
            <RadioGroup
                android:id="@+id/rdbLuaChon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <RadioButton
                    android:id="@+id/rdbNguoiMua"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/nguoimua"></RadioButton>
                <RadioButton
                    android:id="@+id/rdbNguoiBan"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/nguoiban"></RadioButton>
                <RadioButton
                    android:id="@+id/rdbQuanLy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/quanly"></RadioButton>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top">
            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap"
                android:background="@drawable/vienbutton"
                style="@style/buttondangnhap1"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtTaoTaiKhoan"
                android:textColor="@drawable/button_deskop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taotaikhoan"></TextView>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"></TextView>
            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:textColor="@drawable/button_deskop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quenmatkhau"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>