<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InforUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/Header">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnBack"
            android:layout_weight="1"
            android:background="@drawable/ic_navigate_before_black_24dp">
        </Button>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ttCaNhan"
                style="@style/titleheader_chitietthucung">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/txtName"
                    style="@style/edittext_infor_style" />

                <TextView
                    style="@style/edittext_infor_style"
                    android:text="@string/txtEmail" />

                <TextView
                    style="@style/edittext_infor_style"
                    android:text="@string/txtSdt" />

                <TextView
                    style="@style/edittext_infor_style"
                    android:text="@string/txtSex" />

                <TextView
                    style="@style/edittext_infor_style"
                    android:text="@string/txtAddress" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editName"
                    android:text="@string/txtName"
                    style="@style/edittxt_infor_style" />

                <EditText
                    style="@style/edittxt_infor_style"
                    android:id="@+id/editEmail"
                    android:text="@string/txtEmail" />

                <EditText
                    style="@style/edittxt_infor_style"
                    android:id="@+id/editSDT"
                    android:text="@string/txtSdt" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/radNam"
                        android:paddingHorizontal="10dp"
                        android:text="@string/nam"
                        style="@style/radbrn_style" />

                    <RadioButton
                        android:id="@+id/radNu"
                        android:paddingHorizontal="10dp"
                        android:text="@string/nu"
                        style="@style/radbrn_style"/>
                </RadioGroup>

                <EditText
                    style="@style/edittxt_infor_style"
                    android:id="@+id/editAddress"
                    android:text="@string/txtAddress" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:gravity="bottom"
            android:layout_marginBottom="20dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:id="@+id/btnSave"
                android:textStyle="bold"
                android:background="@drawable/vienbutton"
                android:text="@string/btnSave"
                android:layout_marginHorizontal="20dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnChangePass"
                android:text="@string/btnChangePass"
                android:textColor="#fff"
                android:background="@drawable/vienbutton"
                android:layout_marginHorizontal="20dp"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>